[package]
name = "cdylib-plugin"
version = "0.1.3"
authors = ["Jeff Davis <jeff@j-davis.com>"]
edition = "2018"
license = "PostgreSQL OR MIT"
description = "Support plugin-style cdylib crates."
repository = "https://github.com/jeff-davis/cdylib-plugin.rs"
documentation = "https://docs.rs/cdylib-plugin"
